# algo_trading_backtester

./: .gitignore  MONKEY_TESTING_README.md  pyproject.toml  readme.md  streamlit_app.py
data/processed/: eurusd_1h_20100101_20130101_dukascopy_python.csv  eurusd_1h_20100101_20130101_dukascopy_python.csv.meta.json  eurusd_1h_20100101_20260209_dukascopy_python.csv.meta.json
data/samples/: README.md
docs/: CODEBASE.md
docs/workflows/: README.md  download_data.md
pinescript/strategies/: InterEquity2026-02 LiqSweepA.pine
runs/: _index.csv  limited_fixed_brackets.csv  limited_time_exit.csv
runs/2026-02-09_12-15-36_sma_cross_grid_tf-1H_ds-unknown_cdfdf3331275/: config.json
runs/2026-02-09_12-22-01_sma_cross_grid_tf-1H_ds-unknown_cdfdf3331275/: config.json
runs/2026-02-09_12-53-58_sma_cross_optuna_tf-1H_ds-unknown_cdfdf3331275/: study.db
scripts/: clean_runs.py  download_data.py  fetch_mt5_live_data.py  plot_limited_iteration_candles.py  plot_limited_iteration_lightweight.py  plot_limited_results.py  plot_monte_carlo.py  plot_oos_equity.py  run_entry_limited_fixed.py  run_entry_limited_time.py  run_limited_test.py  run_limited_tests.py  run_monte_carlo.py  run_optimize.py  run_walkforward.py  setup_silicon_mt5_local.sh
tests/: README.md  test_core_backtest_helpers.py  test_fetch_mt5_live_data.py  test_fixed_pips_brackets.py  test_ie2026_03_liqsweep_a.py  test_ie2026_03_liqsweep_b.py  test_ie2026_03_liqsweep_c.py  test_limited_runner_full_system.py  test_monkey_bootstrap.py  test_plot_limited_iteration_lightweight.py  test_random_time_exit.py  test_results.py
(+299 files in other folders)
