[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "quantbt"
version = "0.1.0"
description = "Modular Python backtesting and optimisation framework"
readme = "README.md"
requires-python = ">=3.10"
authors = [
  { name = "Your Name" }
]

dependencies = [
  "pandas>=1.5",
  "numpy>=1.23",
  "optuna>=3.0",
  "dukascopy-python>=4.0.1",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
