[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "quantbt"
version = "0.1.0"
description = "Modular Python backtesting and optimisation framework"
readme = "readme.md"
requires-python = ">=3.10"
authors = [
  { name = "Your Name" }
]

dependencies = [
  "pandas>=1.5",
  "numpy>=1.23",
  "optuna>=3.0",
  "plotly>=5.0",
  "dukascopy-python>=4.0.1",
]

[project.optional-dependencies]
ui = [
  "streamlit>=1.30",
]
mt5 = [
  "MetaTrader5>=5.0; platform_system == 'Windows'",
]
mt5-mac = [
  "siliconmetatrader5",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
